[project]
name = "business_news_intelligence_monitor"
version = "0.1.0"
description = "business_news_intelligence_monitor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
business_news_intelligence_monitor = "business_news_intelligence_monitor.main:run"
run_crew = "business_news_intelligence_monitor.main:run"
train = "business_news_intelligence_monitor.main:train"
replay = "business_news_intelligence_monitor.main:replay"
test = "business_news_intelligence_monitor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
